[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Advent of code 2024"
authors = ["y"]
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
pytest = "^8.3.4"
more-itertools = "^10.5.0"
matplotlib = "^3.10.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
ruff = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 99
